# travsr-embed

./: Cargo.toml  LICENSE
.github/workflows/: release.yml
src/: index.rs  main.rs  model.rs
