[package]
name = "travsr-embed-nomic"
version = "0.1.0"
edition = "2021"
description = "Travsr embed sidecar — BAAI/bge-small-en-v1.5, tract ONNX fp32, CLS-384"
license = "MIT"
rust-version = "1.80"

[[bin]]
name = "travsr-embed-nomic"
path = "src/main.rs"

[[bin]]
name = "bench-tract"
path = "src/bin/bench_tract.rs"

[dependencies]
# Published crates.io versions — patched below to local path while RFC-018
# changes are not yet in a crates.io release.
travsr-plugin-protocol = "0.7"
travsr-plugin-sdk      = "0.7"

# tract — pure-Rust ONNX inference (vectorized SIMD kernels for GeLU + matmul).
# BGE-small uses standard BERT (no RoPE), so tract can fully optimize it.
# Benchmark: ~140 nodes/sec single-thread, ~307 nodes/sec at 4 threads.
# Works identically on macOS (Apple Silicon) and OCI ARM64 with no flags.
tract-onnx = "0.23"

# HuggingFace fast tokenizer — loads tokenizer.json from disk.
tokenizers = "0.23"

# SQLite (bundled amalgamation — no system SQLite required).
rusqlite = { version = "0.32", features = ["bundled"] }

# usearch HNSW index — disk-persistent, mmap-loadable, incremental inserts.
usearch = "2.25.3"

dirs               = "5"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Local development override ────────────────────────────────────────────────
[patch.crates-io]
travsr-plugin-protocol = { path = "../travsr/crates/travsr-plugin-protocol" }
travsr-plugin-sdk      = { path = "../travsr/crates/travsr-plugin-sdk" }
